--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -56,6 +56,9 @@
                 <div class="views">
                     {{::e.numOfViews}} <md-icon md-svg-icon="b:eye"></md-icon>
                 </div>
+                <div class="likes">
+                    {{::e.likes}} <md-icon md-svg-icon="b:like"></md-icon>
+                </div>
             </div>
         </div>
         @*<div class="extra-details">
