--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -201,6 +201,12 @@
         .justifyContet(center);
         flex-direction: column;
         position: relative;
+
+        @media(max-width:600px) {
+            &.ng-hide {
+                display:block !important;
+            }
+        }
     }
 
     .cards-info {
