--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿<div @*ng-switch="f.step"*@ ng-switch="f.step" class="flashcard-wrapper">
     <div class="header">
+        <button class="close-btn">
+            <md-icon md-svg-icon="t:close"></md-icon>
+        </button>
         <div multiswitch-when="1|2" class="progress-wrapper">
             <div class="title">
                 <md-icon md-svg-icon="b:flashcard-icon"></md-icon>
