--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
@@ -281,6 +281,9 @@
     font-size: 28px;
   }
 }
+.flashcardPage .cards-info h4 {
+  color: #888b8e;
+}
 .flashcardPage .cards-info .subtitle {
   display: block;
   color: #888b8e;
@@ -427,6 +430,9 @@
 .flashcardPage .card-player .card-template.back .card-content .side.front {
   display: none;
 }
+.flashcardPage .card-player .card-template.both {
+  cursor: auto;
+}
 @media (max-width: 600px) {
   .flashcardPage .card-player .card-template.both .card-content {
     flex-direction: column;
@@ -493,8 +499,8 @@
   align-items: center;
 }
 .flashcardPage .card-player .card-template .card-content .side .img-container ~ .text-container {
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
+  -webkit-align-items: center;
+  align-items: center;
 }
 .flashcardPage .card-player .card-template .card-content .side .img-container,
 .flashcardPage .card-player .card-template .card-content .side .text-container {
@@ -520,13 +526,13 @@
     height: 20px;
   }
 }
-.flashcardPage .card-player .card-template .flip-btn {
+.flashcardPage .card-player .card-template .flip {
   color: #c3c3c3;
   position: absolute;
   right: 10px;
   bottom: 10px;
 }
-.flashcardPage .card-player .card-template .flip-btn md-icon {
+.flashcardPage .card-player .card-template .flip md-icon {
   margin-right: 4px;
   width: 20px;
   height: 19px;
