fixed height of text in mobile

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -436,6 +436,7 @@
                 .align-items(stretch);
                 .justifyContet(space-between);
                 flex-grow: 1;
+                height: inherit;
 
                 .side {
                     width: 100%;
@@ -451,7 +452,7 @@
                     }
 
                     @media(max-width: 600px) {
-                        padding: 10px 50px;
+                        padding: 10px 50px 35px 50px;
 
                         &.front {
                             border-right: none;
